# ARayTracingJourney

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
assets/models/: BoxTexturedWithTangents.glb  TexturedCube.glb
benches/: permute_pixel_bench.rs
src/: frame_timer.rs  main.rs  vk_renderer.rs  window_manager.rs
src/vk_renderer/: lights.rs  mod.rs  renderer.rs  vk_allocator.rs  vk_blas_builder.rs  vk_boot.rs  vk_buffers_suballocator.rs  vk_camera.rs  vk_lights.rs  vk_model.rs  vk_rt_descriptor_set.rs  vk_tlas_builder.rs
src/vk_renderer/model_reader/: gltf_model_reader.rs  mod.rs  model_reader.rs
src/vk_renderer/shaders/: brdfs.glsl  thread_group_id_swizzling.glsl  tonemaps.glsl
src/vk_renderer/shaders/combine/: combine.comp.glsl
src/vk_renderer/shaders/present/: present.comp.glsl
src/vk_renderer/shaders/rt_lightning_shadows/: camera.glsl  light.glsl  model_uniform.glsl  ray_payload.glsl  raytrace.rchit  raytrace.rchit.glsl  raytrace.rgen  raytrace.rgen.glsl  raytrace.rmiss  raytrace.rmiss.glsl  shadow.rmiss  shadow.rmiss.glsl
src/vk_renderer/shaders/tonemap/: tonemap.comp.glsl
src/vk_renderer/shaders/xegtao/: XeGTAO.h  XeGTAO.hlsli  denoise.comp.hlsl  denoise_last.comp.hlsl  main_pass.comp.hlsl  prefilter_depths.comp.hlsl
src/vk_renderer/vk_allocator/: mod.rs  vk_buffers_suballocator.rs  vk_descriptor_sets_allocator.rs  vk_descriptors_allocator.rs  vk_memory_resource_allocator.rs
src/vk_renderer/vk_boot/: base_vk.rs  helper.rs  mod.rs  pointer_chain_helpers.rs  vk_base.rs
src/vk_renderer/vk_rendering_layers/: mod.rs  vk_combine.rs  vk_present.rs  vk_rt_lightning_shadows.rs  vk_tonemap.rs  vk_xe_gtao.rs
src/vk_renderer/vk_rendering_layers/amd_fsr2/: amd_fsr2_api_vk_bindings.rs  ffx_fsr2_api_vk_x64.lib  ffx_fsr2_api_x64.lib  mod.rs
