[package]
name = "ARayTracingJourney"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
lto = false
debug-assertions = true
overflow-checks = true
debug = true
split-debuginfo = '...'  # Platform-specific.
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
lto = true
debug-assertions = false
overflow-checks = false
debug = true
split-debuginfo = '...'  # Platform-specific.
panic = 'unwind'
incremental = false
codegen-units = 8
rpath = false

[dependencies]
num = "0.4.0"
ash = "0.36.0"
winit = "0.26.1"
raw-window-handle = "0.4.3"
gpu-allocator = "0.17.0"
nalgebra = "0.31.0"
cfg-if = "1.0.0"
gltf = "1.0.0"
bitflags = "1.3.2"
itertools = "0.10.3"

[build-dependencies]
shaderc = "0.7.4"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "permute_pixel_bench"
harness = false
