[package]
name = "ARayTracingJourney"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1
lto = false
debug-assertions = true
overflow-checks = true
debug = true
split-debuginfo = '...'  # Platform-specific.
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
lto = false
debug-assertions = false
overflow-checks = false
debug = false
split-debuginfo = '...'  # Platform-specific.
panic = 'unwind'
incremental = false
codegen-units = 8
rpath = false

[dependencies]
num = "0.4.0"
ash = "0.37.0"
winit = "0.27.1"
raw-window-handle = "0.5.0"
gpu-allocator = "0.18.0"
nalgebra = "0.31.0"
cfg-if = "1.0.0"
gltf = "1.0.0"
bitflags = "1.3.2"
itertools = "0.10.3"
take_mut = "0.2.2"
half = "2.1.0"

[build-dependencies]
shaderc = "0.8.0"
hassle-rs = "0.9.0"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "permute_pixel_bench"
harness = false
